fix full time wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,10 @@ body {
   font-size: 1.5rem;
 }
 
+.position_list_item_company {
+  width: 50%;
+}
+
 .position_list_item_company a{
   color: #7c919e;
   font-weight: bold;
@@ -144,23 +148,22 @@ body {
 .footer-container {
   background-color: #457B9D;
   display: flex;
-  justify-content: space-between;
   flex-direction: row;
-  padding: 32px;
+  padding: 2rem;
   color: #F5F2E0;
   position: relative;
   bottom: 0;
   width: 100%;
   margin-top: 2rem;
+  justify-content: center;
 }
 
 .footer-title {
-  padding: 16px;
+  padding: 1rem;
 }
 
 .footer-contact {
-  padding: 16px;
-  justify-content: flex-end;
+  padding: 1rem;
 }
 
 
